--- a/Game-Store/src/components/GameCard/styles.scss
+++ b/Game-Store/src/components/GameCard/styles.scss
@@ -1,12 +1,15 @@
 @import '../../styles/variables';
 
 .game-card{
-    background: $bg-secondary;
+    background: #141414;
+    color: #ffffff;
     border: 1px solid $border-color;
     border-radius: 12px;
     overflow: hidden;
     box-shadow: $shadow-soft;
     transition: transform 0.2 ease, box-shadow 0.2 ease;
+    display: flex;
+    flex-direction: column;
 
     &:hover{
         transform: translateY(-6px);
@@ -21,7 +24,7 @@
 
     img{
         width: 100%;
-        height: 100%;
+        height: auto;
         object-fit: cover;
     }
 }
@@ -36,9 +39,21 @@
     }
 }
 
-.game-card__price {
+.game-card_price {
   display: block;
   margin-bottom: 16px;
   color: $color-primary;
   font-weight: $fw-semibold;
+}
+
+.game-card h3 {
+  color: #ffffff;
+}
+
+.game-card__price {
+  color: #b3ff00; // ou sua cor de destaque
+}
+
+.game-card button {
+  color: #000;
 }
